--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,4 +5,11 @@ jobs:
       - image: circleci/ruby:2.4.1
     steps:
       - checkout
-      - bluh
+      - run: echo "hello"
+      
+  test:
+    docker:
+      - image: circleci/ruby:2.4.1
+    steps:
+      - checkout
+      - run: echo "test"
