--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,24 +1,50 @@
 version: 2
+
 jobs:
-  build:
+  mongotest:
     docker:
-      - image: circleci/ruby:2.4.1
+      - image: circleci/python:3.7
+      - image: circleci/mongo@sha256:9f445565981189224ed6cbe122f8085b51d9b0d69b3d3b3010dfab4236848721
+        environment:
+        - MONGO_INITDB_ROOT_USERNAME=root-test
+        - MONGO_INITDB_ROOT_PASSWORD=pass-test
+        - MONGODB_USER=root-test
+        - MONGODB_PASS=pass-test
     steps:
-      - checkout
-      - run: echo "hello"
-      
-  test:
-    macos:
-      xcode: "9.0"
-    working_directory: ~/demo
-    steps:
-      - checkout
-      - run: echo "test"
-      
-      
+      - run:
+          name: Run tests on mongo
+          command: |
+            pipenv --python 3.7
+            pipenv run pip install pymongo
+            cat << EOF > test.py
+            from pymongo import MongoClient
+            from random import randint
+            from pprint import pprint
+            client = MongoClient("mongodb://root-test:pass-test@localhost:27017")
+            db=client.admin
+            # Issue the serverStatus command and print the results
+            serverStatusResult=db.command("serverStatus")
+            pprint(serverStatusResult)
+            
+            db=client.business
+            # Test inserting sample data
+            names = ['Kitchen','Animal','State', 'Tastey', 'Big','City','Fish', 'Pizza','Goat', 'Salty','Sandwich','Lazy', 'Fun']
+            company_type = ['LLC','Inc','Company','Corporation']
+            company_cuisine = ['Pizza', 'Bar Food', 'Fast Food', 'Italian', 'Mexican', 'American', 'Sushi Bar', 'Vegetarian']
+            for x in range(1, 501):
+                business = {
+                    'name' : names[randint(0, (len(names)-1))] + ' ' + names[randint(0, (len(names)-1))]  + ' ' + company_type[randint(0, (len(company_type)-1))],
+                    'rating' : randint(1, 5),
+                    'cuisine' : company_cuisine[randint(0, (len(company_cuisine)-1))] 
+                }
+                result=db.reviews.insert_one(business)
+                print('Created {0} of 500 as {1}'.format(x,result.inserted_id))
+            print('finished creating 500 business reviews')
+            EOF
+            chmod +x test.py
+            pipenv run python test.py
 workflows:
   version: 2
-  build_and_test:
+  build-and-deploy:
     jobs:
-      - build
-      - test
+    - mongotest
